--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'Jacobites -- Fiction'
 - !lcsh 'Spies -- Scotland -- Highlands -- Fiction'
+- GITenberg
 title: Doom Castle
 url: http://www.gutenberg.org/ebooks/21333
